Feat: NutritionRouter get과 post로 나눠서 역할 구분하고 api 수정
