# back/src/Routers/NutritionRouter.js
@@ -1,13 +1,15 @@
 import { Router } from 'express';
 import { NutritionService } from '../Services/NutritionService.js';
 import { Recommend } from '../modules/RecommendAlgorithm.js';
+import { MealService } from '../services/MealService.js';
 
 const nutritionRouter = Router();
 
-// recommendSystem
-nutritionRouter.post('/nutrition', async (req, res, next) => {
+// recommendSystem get, post
+
+nutritionRouter.get('/nutrition', async (req, res, next) => {
 	try {
-		const { age, sex, weight, breakfast, lunch, dinner, snack } = req.body;
+		const { age, sex, weight, breakfast, lunch, dinner, snack } = req.query;
 
 		const foodList = [...breakfast, ...lunch, ...dinner, ...snack];
 
@@ -23,19 +25,50 @@ nutritionRouter.post('/nutrition', async (req, res, next) => {
 			throw new Error(getFoodList.errorMessage);
 		}
 
-		// TODO 유저가 만들어진 이후 토큰이 있을 경우 해당 유저의 음식리스트에 등록시간과 아점저 + 간식을 추가시켜줘야 함.
-
-		let isLogin = false; //! 로그인 기능을 만든 이후 수정해야함.
 		const { personInfo, result } = await Recommend.recommendSystem(
 			age,
 			sex,
 			weight,
 			getFoodList,
-			isLogin,
 		);
 
 		const bundle = { getFoodList, personInfo, result };
+		
 		res.status(200).json(bundle);
+	} catch (error) {
+		next(error);
+	}
+});
+
+
+nutritionRouter.post('/nutrition', async (req, res, next) => {
+	try {
+		const { breakfast, lunch, dinner, snack } = req.body;
+		const meals = [breakfast, lunch, dinner, snack];
+
+		// TODO 유저가 만들어진 이후 토큰이 있을 경우 해당 유저의 음식리스트에 등록시간과 아점저 + 간식을 추가시켜줘야 함.
+
+		for (let i = 0; i < meals.length; i++) {
+			if (meals[i] == []) {
+				continue;
+			} else {
+				if (i == 0) {
+					const meal_time = "breakfast";
+				} else if (i == 1) {
+					const meal_time = "lunch";
+				} else if (i == 2) {
+					const meal_time = "dinner";
+				} else if (i == 3) {
+					const meal_time = "snack";
+				}
+	
+				const foodList = meals[i];
+	
+				await MealService.createMealData({ user_id, meal_time, foodList });
+			}
+		}
+
+		res.status(201);
 	} catch (error) {
 		next(error);
 	}
